# mini-kv

./: Cargo.toml  LICENSE  README.md
v1/: Cargo.toml
v1/examples/: client.rs  dummy_server.rs  server.rs
v1/src/: error.rs  lib.rs
v1/src/pb/: abi.rs  mod.rs
v1/src/service/: mod.rs
v1/src/storage/: memory.rs  mod.rs
v2/: Cargo.toml  README.md
v2/examples/: client.rs  dummy_server.rs  server.rs  server_with_sled.rs
v2/src/: error.rs  lib.rs
v2/src/pb/: mod.rs
v2/src/service/: mod.rs
v2/src/storage/: memory.rs  mod.rs
v3/: Cargo.toml  README.md  build.rs
v3/examples/: client.rs  dummy_server.rs  server.rs  server_with_codec.rs  server_with_sled.rs
v3/src/: client.rs  error.rs  server.rs
v3/src/network/: frame.rs  mod.rs
v3/src/pb/: mod.rs
v3/src/service/: mod.rs
v3/src/storage/: sleddb.rs
v4/: Cargo.toml  README.md
v4/examples/: client.rs  dummy_server.rs  server.rs  server_with_codec.rs  server_with_sled.rs
v4/fixtures/: client.key  server.key
v4/src/: client.rs  error.rs  server.rs
v4/src/network/: mod.rs  tls.rs
v4/src/storage/: mod.rs
v5/: Cargo.toml  README.md  abi.proto
v5/examples/: client.rs  dummy_server.rs  server.rs  server_with_codec.rs  server_with_sled.rs
v5/fixtures/: ca.cert  ca.key  client.cert  server.cert
v5/src/: client.rs  lib.rs  server.rs
v5/src/network/: frame.rs  mod.rs  stream.rs
v5/src/service/: command_service.rs
v5/src/storage/: memory.rs
