[package]
name = "v1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
dashmap = "4"
prost = "0.10" # 处理 protobuf 的代码
thiserror = "1.0.37"
tracing = "0.1" # 日志处理
http = "0.2"
[dev-dependencies]
anyhow = "1" # 错误处理
async-prost = "0.4" # 支持把 protobuf 封装成 TCP frame
futures = "0.3" # 提供 Stream trait
tokio = { version = "1", features = ["rt", "rt-multi-thread", "io-util", "macros", "net" ] } # 异步网络库
tracing-subscriber = "0.3" # 日志处理

[build-dependencies]
prost-build = "0.10" # 编译 protobuf
