[package]
name = "v5"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "kvs"
path = "src/server.rs"

[[bin]]
name = "kvc"
path = "src/client.rs"

[dependencies]
bytes = "1"
dashmap = "4"
prost = "0.10" # 处理 protobuf 的代码
thiserror = "1.0.37"
tracing = "0.1" # 日志处理
http = "0.2"
sled = "0.34"
tokio = {version="1",features=["full"]}
flate2 = "1.0.24"
tracing-subscriber = "0.3" # 日志处理
anyhow = "1"
tokio-rustls = "0.22"
futures = "0.3" # 提供 Stream trait

[dev-dependencies]
tempfile = "3"
async-prost = "0.4" # 支持把 protobuf 封装成 TCP frame
futures = "0.3" # 提供 Stream trait
tokio-util = {version = "0.7.4",features = ["codec"]}
certify = "0.3"
[build-dependencies]
prost-build = "0.10" # 编译 protobuf
